@@ -230,6 +230,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f2a00550 	vshl\.s32	q0, q0, #0
 0[0-9a-f]+ <[^>]+> f2a00550 	vshl\.s32	q0, q0, #0
 0[0-9a-f]+ <[^>]+> f2a00510 	vshl\.s32	d0, d0, #0
+0[0-9a-f]+ <[^>]+> f2a00550 	vshl\.s32	q0, q0, #0
+0[0-9a-f]+ <[^>]+> f2a00550 	vshl\.s32	q0, q0, #0
+0[0-9a-f]+ <[^>]+> f2a00510 	vshl\.s32	d0, d0, #0
+0[0-9a-f]+ <[^>]+> f2a00550 	vshl\.s32	q0, q0, #0
+0[0-9a-f]+ <[^>]+> f2a00550 	vshl\.s32	q0, q0, #0
+0[0-9a-f]+ <[^>]+> f2a00510 	vshl\.s32	d0, d0, #0
 0[0-9a-f]+ <[^>]+> f28005d0 	vshl\.s64	q0, q0, #0
 0[0-9a-f]+ <[^>]+> f28005d0 	vshl\.s64	q0, q0, #0
 0[0-9a-f]+ <[^>]+> f2800590 	vshl\.s64	d0, d0, #0
@@ -275,6 +281,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387013f 	vbic\.i32	d0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387013f 	vbic\.i32	d0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387013f 	vbic\.i32	d0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387037f 	vbic\.i32	q0, #65280	; 0x0000ff00
 0[0-9a-f]+ <[^>]+> f387037f 	vbic\.i32	q0, #65280	; 0x0000ff00
 0[0-9a-f]+ <[^>]+> f387033f 	vbic\.i32	d0, #65280	; 0x0000ff00
@@ -290,6 +302,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3870b7f 	vbic\.i16	q0, #65280	; 0xff00
 0[0-9a-f]+ <[^>]+> f3870b7f 	vbic\.i16	q0, #65280	; 0xff00
 0[0-9a-f]+ <[^>]+> f3870b3f 	vbic\.i16	d0, #65280	; 0xff00
+0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387011f 	vorr\.i32	d0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387011f 	vorr\.i32	d0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387011f 	vorr\.i32	d0, #255	; 0x000000ff
@@ -311,6 +329,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387013f 	vbic\.i32	d0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387013f 	vbic\.i32	d0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387017f 	vbic\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387013f 	vbic\.i32	d0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387037f 	vbic\.i32	q0, #65280	; 0x0000ff00
 0[0-9a-f]+ <[^>]+> f387037f 	vbic\.i32	q0, #65280	; 0x0000ff00
 0[0-9a-f]+ <[^>]+> f387033f 	vbic\.i32	d0, #65280	; 0x0000ff00
@@ -326,6 +350,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3870b7f 	vbic\.i16	q0, #65280	; 0xff00
 0[0-9a-f]+ <[^>]+> f3870b7f 	vbic\.i16	q0, #65280	; 0xff00
 0[0-9a-f]+ <[^>]+> f3870b3f 	vbic\.i16	d0, #65280	; 0xff00
+0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387011f 	vorr\.i32	d0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
+0[0-9a-f]+ <[^>]+> f387011f 	vorr\.i32	d0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387015f 	vorr\.i32	q0, #255	; 0x000000ff
 0[0-9a-f]+ <[^>]+> f387011f 	vorr\.i32	d0, #255	; 0x000000ff
@@ -509,6 +539,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3200850 	vceq\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200850 	vceq\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200810 	vceq\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3200850 	vceq\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200850 	vceq\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200810 	vceq\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3200850 	vceq\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200850 	vceq\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200810 	vceq\.i32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2000e40 	vceq\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2000e40 	vceq\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2000e00 	vceq\.f32	d0, d0, d0
@@ -569,6 +605,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3b90140 	vceq\.i32	q0, q0, #0
 0[0-9a-f]+ <[^>]+> f3b90140 	vceq\.i32	q0, q0, #0
 0[0-9a-f]+ <[^>]+> f3b90100 	vceq\.i32	d0, d0, #0
+0[0-9a-f]+ <[^>]+> f3b90140 	vceq\.i32	q0, q0, #0
+0[0-9a-f]+ <[^>]+> f3b90140 	vceq\.i32	q0, q0, #0
+0[0-9a-f]+ <[^>]+> f3b90100 	vceq\.i32	d0, d0, #0
+0[0-9a-f]+ <[^>]+> f3b90140 	vceq\.i32	q0, q0, #0
+0[0-9a-f]+ <[^>]+> f3b90140 	vceq\.i32	q0, q0, #0
+0[0-9a-f]+ <[^>]+> f3b90100 	vceq\.i32	d0, d0, #0
 0[0-9a-f]+ <[^>]+> f3b90540 	vceq\.f32	q0, q0, #0
 0[0-9a-f]+ <[^>]+> f3b90540 	vceq\.f32	q0, q0, #0
 0[0-9a-f]+ <[^>]+> f3b90500 	vceq\.f32	d0, d0, #0
@@ -595,12 +637,24 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f2200940 	vmla\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2200940 	vmla\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2200900 	vmla\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2200940 	vmla\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200940 	vmla\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200900 	vmla\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2200940 	vmla\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200940 	vmla\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200900 	vmla\.i32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2000d50 	vmla\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2000d50 	vmla\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2000d10 	vmla\.f32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f3900040 	vmla\.i16	q0, q0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f3900040 	vmla\.i16	q0, q0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f2900040 	vmla\.i16	d0, d0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f3a00040 	vmla\.i32	q0, q0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f3a00040 	vmla\.i32	q0, q0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f2a00040 	vmla\.i32	d0, d0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f3a00040 	vmla\.i32	q0, q0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f3a00040 	vmla\.i32	q0, q0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f2a00040 	vmla\.i32	d0, d0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f3a00040 	vmla\.i32	q0, q0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f3a00040 	vmla\.i32	q0, q0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f2a00040 	vmla\.i32	d0, d0, d0\[0\]
@@ -616,6 +670,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3200940 	vmls\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200940 	vmls\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200900 	vmls\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3200940 	vmls\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200940 	vmls\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200900 	vmls\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3200940 	vmls\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200940 	vmls\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200900 	vmls\.i32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2200d50 	vmls\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2200d50 	vmls\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2200d10 	vmls\.f32	d0, d0, d0
@@ -625,11 +685,19 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3a00440 	vmls\.i32	q0, q0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f3a00440 	vmls\.i32	q0, q0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f2a00440 	vmls\.i32	d0, d0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f3a00440 	vmls\.i32	q0, q0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f3a00440 	vmls\.i32	q0, q0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f2a00440 	vmls\.i32	d0, d0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f3a00440 	vmls\.i32	q0, q0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f3a00440 	vmls\.i32	q0, q0, d0\[0\]
+0[0-9a-f]+ <[^>]+> f2a00440 	vmls\.i32	d0, d0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f3a00540 	vmls\.f32	q0, q0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f3a00540 	vmls\.f32	q0, q0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f2a00540 	vmls\.f32	d0, d0, d0\[0\]
 0[0-9a-f]+ <[^>]+> f2000b10 	vpadd\.i8	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2100b10 	vpadd\.i16	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2200b10 	vpadd\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2200b10 	vpadd\.i32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2200b10 	vpadd\.i32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f3000d00 	vpadd\.f32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2000840 	vadd\.i8	q0, q0, q0
@@ -638,6 +706,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f2100840 	vadd\.i16	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2100840 	vadd\.i16	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2100800 	vadd\.i16	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2200840 	vadd\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200840 	vadd\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200800 	vadd\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2200840 	vadd\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200840 	vadd\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200800 	vadd\.i32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2200840 	vadd\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2200840 	vadd\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2200800 	vadd\.i32	d0, d0, d0
@@ -653,6 +727,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3100840 	vsub\.i16	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3100840 	vsub\.i16	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3100800 	vsub\.i16	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3200840 	vsub\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200840 	vsub\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200800 	vsub\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3200840 	vsub\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200840 	vsub\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200800 	vsub\.i32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f3200840 	vsub\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200840 	vsub\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200800 	vsub\.i32	d0, d0, d0
@@ -677,6 +757,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f2100950 	vmul\.i16	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2100950 	vmul\.i16	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2100910 	vmul\.i16	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2200950 	vmul\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200950 	vmul\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200910 	vmul\.i32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2200950 	vmul\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200950 	vmul\.i32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200910 	vmul\.i32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2200950 	vmul\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2200950 	vmul\.i32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2200910 	vmul\.i32	d0, d0, d0
@@ -904,8 +990,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3a10850 	vqrshrun\.s64	d0, q0, #31
 0[0-9a-f]+ <[^>]+> f2890810 	vshrn\.i16	d0, q0, #7
 0[0-9a-f]+ <[^>]+> f2910810 	vshrn\.i32	d0, q0, #15
+0[0-9a-f]+ <[^>]+> f2910810 	vshrn\.i32	d0, q0, #15
+0[0-9a-f]+ <[^>]+> f2910810 	vshrn\.i32	d0, q0, #15
 0[0-9a-f]+ <[^>]+> f2a10810 	vshrn\.i64	d0, q0, #31
 0[0-9a-f]+ <[^>]+> f2890850 	vrshrn\.i16	d0, q0, #7
+0[0-9a-f]+ <[^>]+> f2910850 	vrshrn\.i32	d0, q0, #15
+0[0-9a-f]+ <[^>]+> f2910850 	vrshrn\.i32	d0, q0, #15
 0[0-9a-f]+ <[^>]+> f2910850 	vrshrn\.i32	d0, q0, #15
 0[0-9a-f]+ <[^>]+> f2a10850 	vrshrn\.i64	d0, q0, #31
 0[0-9a-f]+ <[^>]+> f2890a10 	vshll\.s8	d0, q0, #1
@@ -916,6 +1006,8 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3a10a10 	vshll\.u32	d0, q0, #1
 0[0-9a-f]+ <[^>]+> f3b20300 	vshll\.i8	q0, d0, #8
 0[0-9a-f]+ <[^>]+> f3b60300 	vshll\.i16	q0, d0, #16
+0[0-9a-f]+ <[^>]+> f3ba0300 	vshll\.i32	q0, d0, #32
+0[0-9a-f]+ <[^>]+> f3ba0300 	vshll\.i32	q0, d0, #32
 0[0-9a-f]+ <[^>]+> f3ba0300 	vshll\.i32	q0, d0, #32
 0[0-9a-f]+ <[^>]+> f3bb0740 	vcvt\.s32\.f32	q0, q0
 0[0-9a-f]+ <[^>]+> f3bb07c0 	vcvt\.u32\.f32	q0, q0
@@ -955,6 +1047,14 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> ec510b10 	vmov	r0, r1, d0
 0[0-9a-f]+ <[^>]+> f2870057 	vmov\.i32	q0, #119	; 0x00000077
 0[0-9a-f]+ <[^>]+> f2870017 	vmov\.i32	d0, #119	; 0x00000077
+0[0-9a-f]+ <[^>]+> f2870057 	vmov\.i32	q0, #119	; 0x00000077
+0[0-9a-f]+ <[^>]+> f2870017 	vmov\.i32	d0, #119	; 0x00000077
+0[0-9a-f]+ <[^>]+> f2870057 	vmov\.i32	q0, #119	; 0x00000077
+0[0-9a-f]+ <[^>]+> f2870017 	vmov\.i32	d0, #119	; 0x00000077
+0[0-9a-f]+ <[^>]+> f2870077 	vmvn\.i32	q0, #119	; 0x00000077
+0[0-9a-f]+ <[^>]+> f2870037 	vmvn\.i32	d0, #119	; 0x00000077
+0[0-9a-f]+ <[^>]+> f2870077 	vmvn\.i32	q0, #119	; 0x00000077
+0[0-9a-f]+ <[^>]+> f2870037 	vmvn\.i32	d0, #119	; 0x00000077
 0[0-9a-f]+ <[^>]+> f2870077 	vmvn\.i32	q0, #119	; 0x00000077
 0[0-9a-f]+ <[^>]+> f2870037 	vmvn\.i32	d0, #119	; 0x00000077
 0[0-9a-f]+ <[^>]+> f2870257 	vmov\.i32	q0, #30464	; 0x00007700
@@ -1052,14 +1152,22 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3a00300 	vsubw\.u32	q0, q0, d0
 0[0-9a-f]+ <[^>]+> f2800400 	vaddhn\.i16	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f2900400 	vaddhn\.i32	d0, q0, q0
+0[0-9a-f]+ <[^>]+> f2900400 	vaddhn\.i32	d0, q0, q0
+0[0-9a-f]+ <[^>]+> f2900400 	vaddhn\.i32	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f2a00400 	vaddhn\.i64	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f3800400 	vraddhn\.i16	d0, q0, q0
+0[0-9a-f]+ <[^>]+> f3900400 	vraddhn\.i32	d0, q0, q0
+0[0-9a-f]+ <[^>]+> f3900400 	vraddhn\.i32	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f3900400 	vraddhn\.i32	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f3a00400 	vraddhn\.i64	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f2800600 	vsubhn\.i16	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f2900600 	vsubhn\.i32	d0, q0, q0
+0[0-9a-f]+ <[^>]+> f2900600 	vsubhn\.i32	d0, q0, q0
+0[0-9a-f]+ <[^>]+> f2900600 	vsubhn\.i32	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f2a00600 	vsubhn\.i64	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f3800600 	vrsubhn\.i16	d0, q0, q0
+0[0-9a-f]+ <[^>]+> f3900600 	vrsubhn\.i32	d0, q0, q0
+0[0-9a-f]+ <[^>]+> f3900600 	vrsubhn\.i32	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f3900600 	vrsubhn\.i32	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f3a00600 	vrsubhn\.i64	d0, q0, q0
 0[0-9a-f]+ <[^>]+> f2900900 	vqdmlal\.s16	q0, d0, d0
@@ -1130,9 +1238,11 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3880a10 	vmovl\.u8	q0, d0
 0[0-9a-f]+ <[^>]+> f3900a10 	vmovl\.u16	q0, d0
 0[0-9a-f]+ <[^>]+> f3a00a10 	vmovl\.u32	q0, d0
-0[0-9a-f]+ <[^>]+> f3b20200 	vmovn\.i8	d0, q0
-0[0-9a-f]+ <[^>]+> f3b60200 	vmovn\.i16	d0, q0
-0[0-9a-f]+ <[^>]+> f3ba0200 	vmovn\.i32	d0, q0
+0[0-9a-f]+ <[^>]+> f3b20200 	vmovn\.i16	d0, q0
+0[0-9a-f]+ <[^>]+> f3b60200 	vmovn\.i32	d0, q0
+0[0-9a-f]+ <[^>]+> f3ba0200 	vmovn\.i64	d0, q0
+0[0-9a-f]+ <[^>]+> f3b60200 	vmovn\.i32	d0, q0
+0[0-9a-f]+ <[^>]+> f3b60200 	vmovn\.i32	d0, q0
 0[0-9a-f]+ <[^>]+> f3b20280 	vqmovn\.s16	d0, q0
 0[0-9a-f]+ <[^>]+> f3b60280 	vqmovn\.s32	d0, q0
 0[0-9a-f]+ <[^>]+> f3ba0280 	vqmovn\.s64	d0, q0
@@ -1241,6 +1351,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3b404c0 	vclz\.i16	q0, q0
 0[0-9a-f]+ <[^>]+> f3b404c0 	vclz\.i16	q0, q0
 0[0-9a-f]+ <[^>]+> f3b40480 	vclz\.i16	d0, d0
+0[0-9a-f]+ <[^>]+> f3b804c0 	vclz\.i32	q0, q0
+0[0-9a-f]+ <[^>]+> f3b804c0 	vclz\.i32	q0, q0
+0[0-9a-f]+ <[^>]+> f3b80480 	vclz\.i32	d0, d0
+0[0-9a-f]+ <[^>]+> f3b804c0 	vclz\.i32	q0, q0
+0[0-9a-f]+ <[^>]+> f3b804c0 	vclz\.i32	q0, q0
+0[0-9a-f]+ <[^>]+> f3b80480 	vclz\.i32	d0, d0
 0[0-9a-f]+ <[^>]+> f3b804c0 	vclz\.i32	q0, q0
 0[0-9a-f]+ <[^>]+> f3b804c0 	vclz\.i32	q0, q0
 0[0-9a-f]+ <[^>]+> f3b80480 	vclz\.i32	d0, d0
